# framework.appfw.aul-1

./: .gitignore  CMakeLists.txt  aul-mobile.manifest  aul-wearable.manifest  aul.manifest  aul.pc.in
TC/unit/: pkgname.h  utc_ApplicationFW_aul_open_content_func.c  utc_ApplicationFW_aul_open_file_func.c  utc_ApplicationFW_aul_open_file_with_mimetype_func.c  utc_ApplicationFW_aul_set_defapp_with_mime_func.c
agent/: daemon-manager-launch-agent.c
am_daemon/: amd_app_group.c  amd_app_group.h  amd_appinfo.c  amd_appinfo.h  amd_key.c  amd_key.h  amd_launch.c  amd_launch.h  amd_main.c  amd_request.c  amd_request.h  amd_status.c  amd_status.h
data/: amd_log_dump.sh  config_splash.sh  create_default_service.sh
delegator/: CMakeLists.txt  aul-delegator-server.service  delegator.xml  delegator_client.c  delegator_client.h  delegator_config.h  delegator_server.c  org.tizen.aul.delegator.service.in
feature/: preexec.h
include/: SLP_AUL_PG.h  access_control.h  app_launchpad_types.h  app_signal.h  app_sock.h  aul.h  aul_svc.h  aul_svc_db.h  aul_util.h  aul_zone.h  launch.h  menu_db_util.h  perf.h  simple_util.h
launchpad_src/: launchpad.c  sigchild.h  util_x.c
legacy/: preload.h
packaging/: ac-mobile.service  ac-wearable.service  ac.service  aul.spec  launchpad-preload-mobile.service  launchpad-preload.service  process-pool-launchpad-preload-mobile.service  process-pool-launchpad-preload-wearable.service
process_pool/: launchpad.c  process_pool.c  process_pool.h
src/: app_signal.c  app_sock.c  aul_path.c  key.c  launch.c  launch_glib.c  launch_with_result.c  mime.c  miregex.c  pkginfo.c  runtime_info.c  service.c  service_db.c  simple_util.c  status.c  zone.c
test/: CMakeLists.txt  app_test.c  aul_dbus.c  aul_dbus.h  aul_test.c  com.samsung.camera.service  dbusapp_test.c  launch_app.c  open_app.c
