CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

PROJECT(aul C)
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")

### Global setting ###

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include/aul")

# Build type : Release
IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF()
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")


# Set required packages
INCLUDE(FindPkgConfig)

SET(pkgs_requires "dlog ecore x11 libprivilege-control rua glib-2.0 ecore-x ecore-input evas vconf pkgmgr-info libresourced security-server")
SET(libpkgs_requires "dlog bundle dbus-glib-1 ail xdgmime libsmack ecore pkgmgr-info")

IF(_APPFW_FEATURE_APP_CHECKER)
	SET(pkgs_requires "${pkgs_requires} app-checker app-checker-server")
	SET(libpkgs_requires "${libpkgs_requires} app-checker")
	ADD_DEFINITIONS("-D_APPFW_FEATURE_APP_CHECKER")
ENDIF(_APPFW_FEATURE_APP_CHECKER)

pkg_check_modules(pkgs REQUIRED ${pkgs_requires})
pkg_check_modules(libpkgs REQUIRED ${libpkgs_requires})
PKG_CHECK_MODULES(PKGS REQUIRED glib-2.0 gio-2.0 dlog bundle)

FIND_LIBRARY(LIB_DL dl)

FOREACH(flag ${libpkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${pkgs_CFLAGS})
	SET(TEST_CFLAGS "${TEST_CFLAGS} ${flag}")
ENDFOREACH(flag)

# Compiler flags
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/legacy)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/feature)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fdata-sections -ffunction-sections -Wl,--gc-sections")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -D_FILE_OFFSET_BITS=64")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TEST_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

SET(CMAKE_SKIP_BUILD_RPATH true)

# Get uname value to set 'TARGET' definition
# TODO: Is this needed?
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSHARE_PREFIX=\"/usr/share/aul\"")
IF(_APPFW_FEATURE_PROCESS_POOL)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL")
ENDIF(_APPFW_FEATURE_PROCESS_POOL)
IF(_APPFW_FEATURE_PROCESS_POOL_COMMON)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL_COMMON")
ENDIF(_APPFW_FEATURE_PROCESS_POOL_COMMON)
IF(_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING")
ENDIF(_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING)
IF(_APPFW_FEATURE_MULTI_INSTANCE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_MULTI_INSTANCE")
ENDIF(_APPFW_FEATURE_MULTI_INSTANCE)
IF(_APPFW_FEATURE_MULTI_WINDOW)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_MULTI_WINDOW")
ENDIF(_APPFW_FEATURE_MULTI_WINDOW)
IF(_APPFW_FEATURE_CHANGEABLE_COLOR)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_CHANGEABLE_COLOR")
ENDIF(_APPFW_FEATURE_CHANGEABLE_COLOR)
IF(_APPFW_FEATURE_CPU_BOOST)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_CPU_BOOST")
ENDIF(_APPFW_FEATURE_CPU_BOOST)
IF(_APPFW_FEATURE_CONTACT_PHONE_AS_ONE_APP)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_CONTACT_PHONE_AS_ONE_APP")
ENDIF(_APPFW_FEATURE_CONTACT_PHONE_AS_ONE_APP)
IF(_APPFW_FEATURE_PRIORITY_CHANGE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PRIORITY_CHANGE")
ENDIF(_APPFW_FEATURE_PRIORITY_CHANGE)
IF(_APPFW_FEATURE_DATA_CONTROL)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_DATA_CONTROL")
ENDIF(_APPFW_FEATURE_DATA_CONTROL)
IF(_APPFW_FEATURE_DEBUG_LAUNCHPAD)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_DEBUG_LAUNCHPAD")
ENDIF(_APPFW_FEATURE_DEBUG_LAUNCHPAD)
IF(_APPFW_FEATURE_APP_CONTROL_LITE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_APP_CONTROL_LITE")
ENDIF(_APPFW_FEATURE_APP_CONTROL_LITE)
IF(_APPFW_FEATURE_NATIVE_LAUNCHPAD)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_NATIVE_LAUNCHPAD")
ENDIF(_APPFW_FEATURE_NATIVE_LAUNCHPAD)
IF(_APPFW_FEATURE_WMS_CONNECTION_CHECK)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_WMS_CONNECTION_CHECK")
ENDIF(_APPFW_FEATURE_WMS_CONNECTION_CHECK)
IF(_APPFW_FEATURE_BG_PROCESS_LIMIT)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_BG_PROCESS_LIMIT")
ENDIF(_APPFW_FEATURE_BG_PROCESS_LIMIT)
IF(_APPFW_FEATURE_TTS_MODE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_TTS_MODE")
ENDIF(_APPFW_FEATURE_TTS_MODE)
IF(_APPFW_FEATURE_ULTRA_POWER_SAVING_MODE)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_ULTRA_POWER_SAVING_MODE")
ENDIF(_APPFW_FEATURE_ULTRA_POWER_SAVING_MODE)
IF(_APPFW_FEATURE_VISIBILITY_CHECK_BY_LCD_STATUS)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_VISIBILITY_CHECK_BY_LCD_STATUS")
ENDIF(_APPFW_FEATURE_VISIBILITY_CHECK_BY_LCD_STATUS)

# Linker flags
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")


### Build ###

# aul_mods : modules (static library)
add_library(aul_mods STATIC
		src/app_sock.c
		src/simple_util.c
		)

# launchpad_common (static library)
ADD_LIBRARY(launchpad_common STATIC
	launchpad_src/util_x.c
	)

# aul
add_library(aul SHARED
		src/pkginfo.c
		src/launch.c
		src/launch_glib.c
		src/launch_with_result.c
		src/service.c
		src/mime.c
		src/miregex.c
		src/app_signal.c
		src/key.c
		src/status.c
		src/runtime_info.c
		src/aul_path.c
		)
target_link_libraries(aul aul_mods ${libpkgs_LDFLAGS})
SET_TARGET_PROPERTIES(aul PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(aul PROPERTIES VERSION ${VERSION})

# launchpad(old avatar) daemon
SET(AVATAR_NAME "launchpad_preloading_preinitializing_daemon")
add_executable(${AVATAR_NAME}
	launchpad_src/launchpad.c
	)

MESSAGE("       "${pkgs_LDFLAGS})
target_link_libraries(${AVATAR_NAME} aul_mods launchpad_common aul ${pkgs_LDFLAGS} ${LIB_DL} "-pie")
set_target_properties(${AVATAR_NAME}
		PROPERTIES SKIP_BUILD_RPATH true
		) # remove rpath option that is automatically generated by cmake.

add_executable(amd
                am_daemon/amd_main.c
		am_daemon/amd_key.c
		am_daemon/amd_request.c
		am_daemon/amd_appinfo.c
		am_daemon/amd_cgutil.c
		am_daemon/amd_launch.c
		am_daemon/amd_status.c
                )
target_link_libraries(amd aul_mods rua glib-2.0 bundle ail aul utilX ${pkgs_LDFLAGS} "-pie")

SET(REL_AGENT daemon-manager-release-agent)
ADD_EXECUTABLE(${REL_AGENT} agent/${REL_AGENT}.c)
TARGET_LINK_LIBRARIES(${REL_AGENT} ${PKGS_LDFLAGS} "-pie" aul aul_mods)
SET_TARGET_PROPERTIES(${REL_AGENT} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS} -fPIE")

INSTALL(TARGETS ${REL_AGENT} DESTINATION bin)

SET(LAUNCH_AGENT daemon-manager-launch-agent)
ADD_EXECUTABLE(${LAUNCH_AGENT} agent/${LAUNCH_AGENT}.c)
TARGET_LINK_LIBRARIES(${LAUNCH_AGENT} ${PKGS_LDFLAGS} "-pie")
SET_TARGET_PROPERTIES(${LAUNCH_AGENT} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS} -fPIE")

INSTALL(TARGETS ${LAUNCH_AGENT} DESTINATION bin)



# pkgconfig file
CONFIGURE_FILE(aul.pc.in aul.pc @ONLY)


### Install ###
INSTALL(TARGETS aul DESTINATION lib COMPONENT RuntimeLibraries)
INSTALL(TARGETS ${AVATAR_NAME} DESTINATION bin)
INSTALL(TARGETS amd DESTINATION bin)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/aul.h DESTINATION include/aul)
IF (_APPFW_FEATURE_DEFAULT_FAKE_IMAGE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_DEFAULT_FAKE_IMAGE")
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/config_splash.sh DESTINATION bin)
ENDIF(_APPFW_FEATURE_DEFAULT_FAKE_IMAGE)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/aul.pc DESTINATION lib/pkgconfig)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/legacy/preload_list.txt DESTINATION /usr/share/aul )
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/feature/preexec_list.txt DESTINATION /usr/share/aul )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/miregex DESTINATION /usr/share/aul )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/app_sock.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/simple_util.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/menu_db_util.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/app_signal.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/aul_util.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/access_control.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/perf.h DESTINATION include/aul/launch)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/feature/preexec.h DESTINATION include/aul/launchpad)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/legacy/preload.h DESTINATION include/aul/launchpad)
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/launchpad_src/ DESTINATION include/aul/launchpad FILES_MATCHING PATTERN "*.h")
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libaul_mods.a DESTINATION lib)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/liblaunchpad_common.a DESTINATION lib)

# test
add_subdirectory(test)

